# fresh_wallets_parser

./: .gitignore  README.md  groups.py  main.py  main_1.py  pyproject.toml  settings.ini
config/: app_logger.py
